--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark_blue">#32357A</color>
     <color name="light_blue">#F2F1F6</color>
+    <color name="primary">#1C2E46</color>
+    <color name="primary_dark">#142232</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="input_background">#CECECE</color> <!-- Corrigido para 6 caracteres -->
+    <color name="icon_background">#20FFFFFF</color> <!-- Transparência de 12.5% no formato RGBA -->
+    <color name="received_message_background">#090D16</color>
 </resources>
