--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -53,7 +53,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/background"
         app:layout_constraintEnd_toStartOf="@+id/btnInf"
-        app:layout_constraintStart_toEndOf="@+id/background"
+        app:layout_constraintStart_toEndOf="@id/btnBack"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- RecyclerView -->
@@ -63,17 +63,6 @@
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/messageInput" />
-
-    <!-- Barra de Progresso -->
-    <ProgressBar
-        android:id="@+id/progress"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <!-- Botão Enviar -->
     <FrameLayout
         android:id="@+id/btnSend"
