--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -212,7 +212,7 @@
                                 android:id="@+id/txtReservas"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Reservas"
+                                android:text="Reservar"
                                 android:textAlignment="center"
                                 android:textStyle="bold" />
                         </LinearLayout>
