--- a/app/src/main/res/layout/activity_dialog_reservation_bike.xml
+++ b/app/src/main/res/layout/activity_dialog_reservation_bike.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Entregar Bicicleta"
+        android:text="Reservar Bicicleta"
         android:textColor="@color/dark_blue"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -68,6 +68,7 @@
                 android:textStyle="bold" />
 
             <EditText
+                android:id="@+id/bikeName"
                 android:layout_width="200dp"
                 android:layout_height="40dp"
                 android:inputType="textEmailAddress"
@@ -91,6 +92,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/stationName"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:inputType="textEmailAddress"
@@ -113,6 +115,7 @@
                 android:textStyle="bold" />
 
             <EditText
+                android:id="@+id/idRestore"
                 android:layout_width="200dp"
                 android:layout_height="40dp"
                 android:inputType="textEmailAddress"
@@ -150,14 +153,14 @@
             app:strokeWidth="2dp" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnDialogEntregar"
+            android:id="@+id/btnDialogReservar"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:backgroundTint="@color/dark_blue"
             android:padding="12dp"
-            android:text="Entregar"
+            android:text="Reservar"
             android:textSize="12sp" />
 
     </LinearLayout>
