--- a/app/src/main/res/layout/activity_dialog_return_bike.xml
+++ b/app/src/main/res/layout/activity_dialog_return_bike.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@id/textc"
         app:layout_goneMarginTop="10dp" />
 
-        <LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="100dp"
@@ -60,25 +60,27 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/id_Bike"
             android:layout_width="300dp"
             android:layout_height="40dp"
             android:inputType="textEmailAddress"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Estação"
-                android:textColor="@color/dark_blue"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Estação"
+            android:textColor="@color/dark_blue"
+            android:textStyle="bold" />
 
-            <EditText
-                android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:inputType="textEmailAddress"
-                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        <EditText
+            android:id="@+id/stationName"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:inputType="textEmailAddress"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     </LinearLayout>
 
