--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_main">
+    tools:context=".activity_home">
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -32,7 +32,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:id="@+id/textVie"
+                        android:id="@+id/textUserPoints"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="32dp"
@@ -65,7 +65,7 @@
                             app:srcCompat="@drawable/user_1" />
 
                         <TextView
-                            android:id="@+id/textView4"
+                            android:id="@+id/textUserName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
