--- a/app/src/main/res/layout/activity_bike_list.xml
+++ b/app/src/main/res/layout/activity_bike_list.xml
@@ -65,7 +65,7 @@
             tools:ignore="MissingConstraints">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/stationname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
